Appending File Causes Blender To Crash (NSFW) #92430

Closed
opened 2021-10-23 06:09:22 +02:00 by Mysticaldragoon01 · 10 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: AMD Radeon(TM) Graphics ATI Technologies Inc. 4.5.13596 Core Profile Context 20.10.21.01 27.20.1021.1002

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-22 22:32, hash: 231d66d8ba
Worked: 3.0.0 Alpha, branch: cycles-x, commit date: 2021-09-17 17:22, hash: 8d25aeb6a6

Short description of error
When I try to append the ReVAmped_body_base_regular.001 mesh from the blend file, it crashes. This doesn't happen with any other file I have nor does this problem occur in a much older branch version of 3.0. I think it might just be my specs or the model but it just doesn't sit right that this problem doesn't happen in older versions of 3.0.

Exact steps for others to reproduce the error
When appending the provided file to a new file, append the ReVAmped_body_base_regular.001 mesh or any collection that has it. (warning the file is nsfw)
File: AC_Body_Base_v4_vra_edit.blend

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: AMD Radeon(TM) Graphics ATI Technologies Inc. 4.5.13596 Core Profile Context 20.10.21.01 27.20.1021.1002 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-22 22:32, hash: `231d66d8ba` Worked: 3.0.0 Alpha, branch: cycles-x, commit date: 2021-09-17 17:22, hash: `8d25aeb6a6` **Short description of error** When I try to append the ReVAmped_body_base_regular.001 mesh from the blend file, it crashes. This doesn't happen with any other file I have nor does this problem occur in a much older branch version of 3.0. I think it might just be my specs or the model but it just doesn't sit right that this problem doesn't happen in older versions of 3.0. **Exact steps for others to reproduce the error** When appending the provided file to a new file, append the ReVAmped_body_base_regular.001 mesh or any collection that has it. (warning the file is nsfw) File: [AC_Body_Base_v4_vra_edit.blend](https://archive.blender.org/developer/F11409469/AC_Body_Base_v4_vra_edit.blend)

Added subscriber: @Mysticaldragoon01

Added subscriber: @Mysticaldragoon01

Added subscriber: @mib2berlin

Added subscriber: @mib2berlin

I can verify the crash on Windows 11 with build from 10.07,2021:
Blender-3.0.0-alpha+master.439c9b0b8478-windows.amd64-release>blender.exe

Error : EXCEPTION_STACK_OVERFLOW
Address : 0x00007FF6F9245B99

I can verify the crash on Windows 11 with build from 10.07,2021: Blender-3.0.0-alpha+master.439c9b0b8478-windows.amd64-release>blender.exe Error : EXCEPTION_STACK_OVERFLOW Address : 0x00007FF6F9245B99

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Added subscriber: @deadpin

Added subscriber: @deadpin

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

This looks to have been caused by 271210126e

It's a stack overflow caused by recursion; the following 6 frames are repeated forever:

...
blender.exe!foreach_libblock_append_callback(LibraryIDLinkCallbackData * cb_data) Line 605	C
blender.exe!BKE_lib_query_foreachid_process(LibraryForeachIDData * data, ID * * id_pp, int cb_flag) Line 96	C
blender.exe!BKE_fcurve_foreach_id(FCurve * fcu, LibraryForeachIDData * data) Line 196	C
blender.exe!BKE_animdata_foreach_id(AnimData * adt, LibraryForeachIDData * data) Line 298	C
blender.exe!library_foreach_ID_link(Main * bmain, ID * id_owner, ID * id, int(*)(LibraryIDLinkCallbackData *) callback, void * user_data, int flag, LibraryForeachIDData * inherit_data) Line 301	C
blender.exe!BKE_library_foreach_ID_link(Main * bmain, ID * id, int(*)(LibraryIDLinkCallbackData *) callback, void * user_data, int flag) Line 327	C
This looks to have been caused by 271210126e It's a stack overflow caused by recursion; the following 6 frames are repeated forever: ``` ... blender.exe!foreach_libblock_append_callback(LibraryIDLinkCallbackData * cb_data) Line 605 C blender.exe!BKE_lib_query_foreachid_process(LibraryForeachIDData * data, ID * * id_pp, int cb_flag) Line 96 C blender.exe!BKE_fcurve_foreach_id(FCurve * fcu, LibraryForeachIDData * data) Line 196 C blender.exe!BKE_animdata_foreach_id(AnimData * adt, LibraryForeachIDData * data) Line 298 C blender.exe!library_foreach_ID_link(Main * bmain, ID * id_owner, ID * id, int(*)(LibraryIDLinkCallbackData *) callback, void * user_data, int flag, LibraryForeachIDData * inherit_data) Line 301 C blender.exe!BKE_library_foreach_ID_link(Main * bmain, ID * id, int(*)(LibraryIDLinkCallbackData *) callback, void * user_data, int flag) Line 327 C ```

In #92430#1240426, @deadpin wrote:
This looks to have been caused by 271210126e

It's a stack overflow caused by recursion; the following 6 frames are repeated forever:

...
blender.exe!foreach_libblock_append_callback(LibraryIDLinkCallbackData * cb_data) Line 605	C
blender.exe!BKE_lib_query_foreachid_process(LibraryForeachIDData * data, ID * * id_pp, int cb_flag) Line 96	C
blender.exe!BKE_fcurve_foreach_id(FCurve * fcu, LibraryForeachIDData * data) Line 196	C
blender.exe!BKE_animdata_foreach_id(AnimData * adt, LibraryForeachIDData * data) Line 298	C
blender.exe!library_foreach_ID_link(Main * bmain, ID * id_owner, ID * id, int(*)(LibraryIDLinkCallbackData *) callback, void * user_data, int flag, LibraryForeachIDData * inherit_data) Line 301	C
blender.exe!BKE_library_foreach_ID_link(Main * bmain, ID * id, int(*)(LibraryIDLinkCallbackData *) callback, void * user_data, int flag) Line 327	C

Is there a solution to this or is this a genuine bug? Sorry I'm new to this.

> In #92430#1240426, @deadpin wrote: > This looks to have been caused by 271210126e > > It's a stack overflow caused by recursion; the following 6 frames are repeated forever: > ``` > ... > blender.exe!foreach_libblock_append_callback(LibraryIDLinkCallbackData * cb_data) Line 605 C > blender.exe!BKE_lib_query_foreachid_process(LibraryForeachIDData * data, ID * * id_pp, int cb_flag) Line 96 C > blender.exe!BKE_fcurve_foreach_id(FCurve * fcu, LibraryForeachIDData * data) Line 196 C > blender.exe!BKE_animdata_foreach_id(AnimData * adt, LibraryForeachIDData * data) Line 298 C > blender.exe!library_foreach_ID_link(Main * bmain, ID * id_owner, ID * id, int(*)(LibraryIDLinkCallbackData *) callback, void * user_data, int flag, LibraryForeachIDData * inherit_data) Line 301 C > blender.exe!BKE_library_foreach_ID_link(Main * bmain, ID * id, int(*)(LibraryIDLinkCallbackData *) callback, void * user_data, int flag) Line 327 C > ``` Is there a solution to this or is this a genuine bug? Sorry I'm new to this.

This issue was referenced by 15762e9611

This issue was referenced by 15762e961127fb8fbde1855311e01f99dfe5677e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2021-10-25 10:58:00 +02:00
Thomas Dinges added this to the 3.0 milestone 2023-02-08 15:58:50 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92430
No description provided.