Fix T92430: Infinite recursion in some cases in new append code.

Shapekeys, always shapekeys... Since we cannot deal with them as regular
IDs, we need to handle potential recursion cases ourselves here. sigh.